# AchuK

./: analytics.py  challan.py  config.py  cvcs.py  detector.py  finetune.py  map_integration.py  ocr.py  pipeline.py  preprocessing.py
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: config.py  main.py  settings.py
backend/app/domain/: analytics.py  challan.py  cvcs.py  detector.py  map_integration.py  ocr.py  preprocessing.py  rule_engine.py
backend/app/routers/: analytics.py  cameras.py  challans.py  health.py  jobs.py  live.py  map.py  violations.py
backend/app/schemas/: responses.py
backend/app/services/: camera_registry.py  inference.py  jobs.py  live_feed.py  photo_pipeline.py  store.py  video_pipeline.py
backend/configs/cameras/: cameras.json
backend/configs/cameras/calibration/: CAM-005.json
backend/models/: helmet.pt  triple_riding.pt  yolov8_plate.pt  yolov8_seatbelt.pt  yolov8_triple.pt
backend/scripts/: probe_plates.py  probe_video.py  seed_demo.py
frontend/: .gitignore  README.md  index.html  vite.config.js
frontend/design-reference/: README.md
frontend/src/: App.jsx  api.js  styles.css  theme.js
frontend/src/components/: CameraTable.jsx  DecisionDonut.jsx  Header.jsx  Panel.jsx  SearchBar.jsx  SearchResults.jsx  TrendChart.jsx  ZoneHourHeatmap.jsx
frontend/src/lib/: mappls.js
frontend/src/pages/: AnalyticsPage.jsx  LiveWallPage.jsx  MapPage.jsx  OperationsDashboardPage.jsx  PatrolPage.jsx  ReviewConsolePage.jsx
