[project]
name = "backend"
version = "0.1.0"
description = "Automated Photo Identification and Classification for Traffic Violations — FastAPI backend"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
    "pydantic-settings>=2.5",
    "python-dotenv>=1.0",
    "ultralytics>=8.3",
    "opencv-python-headless>=4.10",
    "numpy>=1.26,<2.2",
    "pillow>=10.4",
    "requests>=2.32",
    "easyocr>=1.7",
]

[tool.uv]
# PaddleOCR is optional; ocr.py falls back to easyocr automatically.
# Install with: uv pip install paddleocr paddlepaddle

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
